tests/ui/type-alias-impl-trait/generic_different_defining_uses.stderr
error: concrete type differs from previous defining opaque type use
  --> $DIR/generic_different_defining_uses.rs:14:5
   |
LL |     Some(t).into_iter()
   |     ^^^^^^^^^^^^^^^^^^^ expected `std::iter::Once<T>`, got `std::option::IntoIter<T>`
   |
note: previous use here
  --> $DIR/generic_different_defining_uses.rs:9:5
   |
LL |     std::iter::once(t)
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

